--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,25 @@
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/dangakeri/Trillo.git
-git push -u origin main
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: var(--color-Grey-light-2);
+  box-shadow: var(--shadow-dark);
+
+  min-height: 50rem;
+}
+.header {
+  height: 7rem;
+  background-color: #fff;
+  border-bottom: var(--color-Grey-light-2);
+}
+.content {
+  display: flex;
+}
+.sidebar {
+  background-color: var(--color-Grey-dark-1);
+
+  flex: 0 0 18%;
+}
+.hotel-view {
+  background-color: #fff;
+  flex: 1;
+}
