--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,19 +1,59 @@
 // logo
 .logo{
     height: 3.25rem;
+    margin-left: 3rem;
 }
 
 // searchbox
 
 .search{
-    &__input{}
-    &__button{}
+    flex: 0 0 40%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &__input{
+        font-family: inherit;
+        font-size: inherit;
+        color: inherit;
+        background-color: var(--color-Grey-light-2);
+        border: none;
+        padding: .7rem 2rem;
+        border-radius: 10rem;
+        width: 90%;
+        margin-right: -3.25rem;
+
+        &:focus{
+            outline: none;
+            width: 100%;
+            background-color: var(--color-Grey-light-3);
+            transition: all .2s;
+        }
+        &::-webkit-input-placeholder{
+            font-weight: 100;
+            color: var(--color-Grey-light-4);
+        }
+
+    }
+
+    &__input:focus + &__button{
+        background-color: var(--color-Grey-light-3);
+    }
+    &__button{
+        border: none;
+        background-color: var(--color-Grey-light-2);
+
+        &:focus{
+            outline: none;
+            transform: translateY(0.2rem);
+        }
+    }
     &__icon{
         height: 2rem;
         width: 2rem;
+        fill: var(--color-Grey-light-4);
     }
 }
-
 
 // navigation
 .user-nav{
