--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-Grey-light-2);
+  border-bottom:1px solid var(--color-Grey-light-2);
 
   display: flex;
   justify-content: space-between;
@@ -23,8 +23,32 @@
   background-color: var(--color-Grey-dark-1);
 
   flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .hotel-view {
   background-color: #fff;
   flex: 1;
+}
+.detail{
+    font-size: 1.4rem;
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-Grey-light-1);
+    box-shadow: var(--line);
+}
+.description{
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex :0 0 60%;
+    margin-right: 4.5rem;
+}
+.user-reviews{
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
